[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites - player/character_0000.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites - player/character_0001.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/PlayerJump.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/PickupKey.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/Hit.ogg" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
height = 3.75729

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "moving",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 30
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "air"
speed_scale = 1.75
playing = true

[node name="Timer" type="Timer" parent="."]

[node name="Flag" type="Timer" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -22.0

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -22.0

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -18.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
